Registration small fix ups

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #fafafa;
+}
+
 .text-shadow {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
+
